fixed spacing in secondary footer

--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -194,17 +194,21 @@ iframe {
 
 .last-row {
 	width: 80%;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 .last-column{
 	width: 35%;
+	height: 330px;
 	display: inline-block;
-	margin-left: 10%;
-	float: left;
 }
 
+div#ambassadors.last-column{
+
+}
+
+div#highlights.last-column{
+	float: right;
+}
 /*++++++++++*/
 
 
